<resources>
    <string name="project_name" translatable="false">CoMaps</string>
    <string name="app_site_url">https://comaps.app/</string>
    <string name="back">Back</string>
    <string name="cancel">Cancel</string>
    <string name="delete">Delete</string>
    <string name="download_maps">Download Maps</string>
    <string name="download_has_failed">Download has failed, tap to try again</string>
    <string name="downloading">Downloading…</string>
    <string name="kilometres">Kilometers</string>
    <string name="miles">Miles</string>
    <string name="later">Later</string>
    <string name="search">Search</string>
    <string name="search_map">Search Map</string>
    <string name="location_is_disabled_long_text">You currently have all Location Services for this device or application disabled. Please enable them in Settings.</string>
    <string name="limited_accuracy">Limited Accuracy</string>
    <string name="precise_location_is_disabled_long_text">To ensure accurate navigation enable Precise Location in settings</string>
    <string name="zoom_to_country">Show on the map</string>
    <string name="country_status_download_failed">Download has failed</string>
    <string name="try_again">Try Again</string>
    <string name="about_menu_title">About CoMaps</string>
    <string name="about_headline">Open project powered by the community</string>
    <string name="about_proposition_1">• Easy to use and polished</string>
    <string name="about_proposition_2">• Privacy-focused and ads-free</string>
    <string name="about_proposition_3">• Offline, fast and compact</string>
    <string name="about_developed_by_enthusiasts">Fully open source, not for profit, transparent decision-making and finances.</string>
    <string name="location_settings">Location Settings</string>
    <string name="close">Close</string>
    <string name="unsupported_phone">The app requires hardware accelerated OpenGL. Unfortunately, your device is not supported.</string>
    <string name="download">Download</string>
    <string name="disconnect_usb_cable">Please disconnect USB cable or insert memory card to use CoMaps</string>
    <string name="not_enough_free_space_on_sdcard">Please free up some space on the SD card/USB storage first in order to use the app</string>
    <string name="download_resources">Before you start using the app, please download the world overview map to your device.
\nIt will use %s of storage.</string>
    <string name="download_resources_continue">Go to Map</string>
    <string name="downloading_country_can_proceed">Downloading %1$s (%2$s). You can now
\nproceed to the map.</string>
    <string name="download_country_ask">Download %1$s? (%2$s)</string>
    <string name="update_country_ask">Update %1$s? (%2$s)</string>
    <string name="pause">Pause</string>
    <string name="continue_button">Continue</string>
    <string name="download_country_failed">%s download has failed</string>
    <string name="add_new_set">Add a New List</string>
    <string name="bookmark_set_name">List Name</string>
    <string name="bookmarks">Places</string>
    <string name="bookmarks_and_tracks">Favorites</string>
    <string name="name">Name</string>
    <string name="address">Address</string>
    <string name="list">List</string>
    <string name="settings">Settings</string>
    <string name="maps_storage">Save maps to</string>
    <string name="maps_storage_summary">Select the folder to download maps to</string>
    <string name="maps_storage_downloaded">Downloaded maps</string>
    <string name="maps_storage_free_size">%1$s free of %2$s</string>
    <string name="move_maps">Move maps?</string>
    <string name="move_maps_error">Error moving map files</string>
    <string name="wait_several_minutes">This can take several minutes.
\nPlease wait…</string>
    <string name="measurement_units">Measurement units</string>
    <string name="measurement_units_summary">Choose between miles and kilometers</string>
    <string name="category_eat">Where to eat</string>
    <string name="category_food">Groceries</string>
    <string name="category_transport">Transport</string>
    <string name="category_fuel">Gas</string>
    <string name="category_parking">Parking</string>
    <string name="category_shopping">Shopping</string>
    <string name="category_secondhand">Second Hand</string>
    <string name="category_hotel">Hotel</string>
    <string name="category_tourism">Sights</string>
    <string name="category_entertainment">Entertainment</string>
    <string name="category_atm">ATM</string>
    <string name="category_nightlife">Nightlife</string>
    <string name="category_children">Family holiday</string>
    <string name="category_bank">Bank</string>
    <string name="category_pharmacy">Pharmacy</string>
    <string name="category_hospital">Hospital</string>
    <string name="category_toilet">Toilet</string>
    <string name="category_post">Post</string>
    <string name="category_police">Police</string>
    <string name="category_recycling">Recycling</string>
    <string name="category_water">Water</string>
    <string name="category_rv">RV Facilities</string>
    <string name="description">Notes</string>
    <string name="share_bookmarks_email_subject">My CoMaps Favorites</string>
    <string name="share_bookmarks_email_body">Hello!
\n
\nAttached are my Favorites; please open them in CoMaps. If you don\'t have it installed you can download it here: https://www.comaps.app/download/
\n
\nEnjoy travelling with CoMaps!</string>
    <string name="load_kmz_title">Loading Favorites</string>
    <string name="load_kmz_successful">Favorites loaded successfully! You can find them on the map or on the Favorites Manager screen.</string>
    <string name="load_kmz_failed">Failed to load Favorites. The file may be corrupted or defective.</string>
    <string name="unknown_file_type">The file type is not recognized by the app:
\n%1$s</string>
    <string name="failed_to_open_file">Failed to open file %1$s
\n
\n%2$s</string>
    <string name="edit">Edit</string>
    <string name="unknown_current_position">Your location hasn\'t been determined yet</string>
    <string name="cant_change_this_setting">Sorry, Map Storage settings are currently disabled</string>
    <string name="downloading_is_active">Map download is in progress now</string>
    <string name="my_position_share_sms">Check out my current location in CoMaps! %1$s or %2$s Don\'t have offline maps? Download here: https://www.comaps.app/download/</string>
    <string name="bookmark_share_email_subject">Follow this link %1$s or paste these coordinates %2$s into your maps app to see this location.</string>
    <string name="my_position_share_email_subject">Hey, check out my current location on the CoMaps map!</string>
    <string name="my_position_share_email">Follow this link %1$s or paste these coordinates %2$s into your maps app to see my location.</string>
    <string name="share">Share</string>
    <string name="email">Email</string>
    <string name="copied_to_clipboard">Copied to clipboard: %s</string>
    <string name="done">Done</string>
    <string name="data_version">OpenStreetMap data: %s</string>
    <string name="pref_about_summary">Report issues, get help, donate\nVersion: v%1$s</string>
    <string name="tracks_title">Tracks</string>
    <string name="length">Length</string>
    <string name="share_my_location">Share My Location</string>
    <string name="prefs_group_map_appearance">Map appearance</string>
    <string name="prefs_group_map_appearance_summary">Map language, labels size, 2D/3D buildings</string>
    <string name="prefs_group_interface">Interface</string>
    <string name="prefs_group_interface_summary">Night mode, buttons, language</string>
    <string name="prefs_group_data_management">Data management</string>
    <string name="prefs_group_data_management_summary">Map storage, backup favorites</string>
    <string name="prefs_group_information">Information</string>
    <string name="prefs_group_route">Navigation</string>
    <string name="prefs_group_route_summary">Units, voice instructions, routing options</string>
    <string name="pref_zoom_title">Zoom buttons</string>
    <string name="pref_zoom_summary">Display on the map</string>
    <string name="prefs_group_advanced">Advanced</string>
    <string name="prefs_group_advanced_summary">Enable logging</string>
    <string name="download_resources_custom_url_title">Custom Map Server</string>
    <string name="download_resources_custom_url_message">Override the default map download server used for map downloads. Leave empty to use CoMaps default server.</string>
    <string name="download_resources_custom_url_summary_none">Not set</string>
    <string name="download_resources_custom_url_error_scheme">Please enter a URL starting with http:// or https://</string>
    <string name="pref_map_style_title">Night Mode</string>
    <string name="off">Off</string>
    <string name="on">On</string>
    <string name="auto">Auto</string>
    <string name="pref_map_3d_title">Perspective view</string>
    <string name="pref_map_3d_buildings_title">3D buildings</string>
    <string name="pref_map_3d_buildings_disabled_summary">3D buildings are disabled in power saving mode</string>
    <string name="pref_tts_enable_title">Voice Instructions</string>
    <string name="pref_tts_street_names_title">Announce Street Names</string>
    <string name="pref_tts_street_names_description">When enabled, the name of the street or exit to turn onto will be spoken aloud.</string>
    <string name="pref_tts_language_title">Voice Language</string>
    <string name="pref_tts_test_voice_title">Test Voice Directions</string>
    <string name="pref_tts_playing_test_voice">Check the volume or system Text-To-Speech settings if you don\'t hear the voice now</string>
    <string name="pref_tts_unavailable">Not Available</string>
    <string name="tts_toggle_enable">Enable voice instructions</string>
    <string name="tts_toggle_disable">Disable voice instructions</string>
    <string name="pref_map_auto_zoom">Auto zoom</string>
    <string name="placepage_distance">Distance</string>
    <string name="search_show_on_map">View on map</string>
    <string name="menu">Menu</string>
    <string name="website">Website</string>
    <string name="news">News</string>
    <string name="panoramax">Panoramax Picture</string>
    <string name="feedback">Feedback</string>
    <string name="rate_the_app">Rate the app</string>
    <string name="help">Help</string>
    <string name="faq">Frequently Asked Questions</string>
    <string name="donate">Donate</string>
    <string name="how_to_support_us">Volunteer and improve CoMaps</string>
    <string name="copyright">Copyright</string>
    <string name="report_a_bug">Report a bug</string>
    <string name="compass_calibration_recommended">Improve arrow direction by moving the phone in a figure-eight motion to calibrate the compass.</string>
    <string name="save">Save</string>
    <string name="p2p_start">Start</string>
    <string name="editor_add_select_location">Select Location</string>
    <string name="editor_focus_map_on_location">Drag the map to place the cross at the location of the place or business.</string>
    <string name="planning_route_manage_route">Manage Route</string>
    <string name="profile">OpenStreetMap profile</string>
    <string name="prefs_group_privacy">Privacy</string>
    <string name="prefs_group_privacy_summary">Search history</string>
    <string name="power_management">Power management</string>
    <string name="prefs_group_power_summary">Screen timeout, mobile data</string>
    <string name="avoid_unpaved">Avoid unpaved roads</string>
    <string name="avoid_ferry">Avoid ferries</string>
    <string name="avoid_steps">Avoid stairs</string>
    <string name="avoid_paved">Avoid paved roads</string>
    <string name="download_map_title">Download the world overview map</string>
</resources>