<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:orientation="vertical">

  <com.google.android.material.appbar.MaterialToolbar
    android:id="@+id/toolbar_point_chooser"
    style="@style/MwmWidget.ToolbarStyle"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="end|center_vertical"
    android:theme="@style/MwmWidget.ToolbarTheme"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent">

      <com.google.android.material.textview.MaterialTextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/margin_half"
        android:text="@string/editor_add_select_location"
        android:textAppearance="@style/MwmTextAppearance.Toolbar.Title"/>
    </com.google.android.material.appbar.MaterialToolbar>

  <com.google.android.material.textview.MaterialTextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="?panel"
    android:padding="@dimen/margin_base"
    android:text="@string/editor_focus_map_on_location"
    app:layout_constraintTop_toBottomOf="@+id/toolbar_point_chooser" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/done"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="MwmWidget.M3.FAB.Primary"
        app:shapeAppearance="@style/ShapeAppearanceOverlay.Material3.FloatingActionButton"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:contentDescription="@string/save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/ic_done" />
</androidx.constraintlayout.widget.ConstraintLayout>
