<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView 
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cycling_options_content"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
  <LinearLayout
    android:orientation="horizontal"
    android:minHeight="@dimen/height_block_base"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingEnd="@dimen/margin_half"
    android:paddingStart="@dimen/margin_base">
    <com.google.android.material.imageview.ShapeableImageView
      android:layout_width="24dp"
      android:layout_height="24dp"
      android:layout_marginEnd="@dimen/margin_base_plus"
      android:layout_marginTop="@dimen/margin_half_plus"
      app:srcCompat="@drawable/ic_avoid_ferry_disabled"
      app:tint="?iconTint" />
    <com.google.android.material.textview.MaterialTextView
      android:text="@string/avoid_ferry"
      android:textAppearance="?android:attr/textAppearanceMedium"
      android:layout_width="0dp"
      android:layout_weight="1"
      android:layout_height="wrap_content"
      android:layout_gravity="center_vertical"
      android:textColor="?android:attr/textColorPrimary"/>
    <com.google.android.material.materialswitch.MaterialSwitch
      android:id="@+id/avoid_ferries_bicycle_btn"
      android:layout_width="wrap_content"
      android:layout_height="match_parent"
      android:padding="@dimen/margin_half_double_plus"/>
  </LinearLayout>
  <LinearLayout
    android:orientation="horizontal"
    android:minHeight="@dimen/height_block_base"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingEnd="@dimen/margin_half"
    android:paddingStart="@dimen/margin_base">
    <com.google.android.material.imageview.ShapeableImageView
      android:layout_width="24dp"
      android:layout_height="24dp"
      android:layout_marginEnd="@dimen/margin_base_plus"
      android:layout_marginTop="@dimen/margin_half_plus"
      app:srcCompat="@drawable/ic_avoid_unpaved_disabled"
      app:tint="?iconTint" />
    <com.google.android.material.textview.MaterialTextView
      android:text="@string/avoid_unpaved"
      android:textAppearance="?android:attr/textAppearanceMedium"
      android:layout_width="0dp"
      android:layout_weight="1"
      android:layout_height="wrap_content"
      android:layout_gravity="center_vertical"
      android:textColor="?android:attr/textColorPrimary"/>
    <com.google.android.material.materialswitch.MaterialSwitch
      android:id="@+id/avoid_dirty_roads_bicycle_btn"
      android:layout_width="wrap_content"
      android:layout_height="match_parent"
      android:padding="@dimen/margin_half_double_plus"/>
  </LinearLayout>
  <LinearLayout
    android:orientation="horizontal"
    android:minHeight="@dimen/height_block_base"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingEnd="@dimen/margin_half"
    android:paddingStart="@dimen/margin_base">
    <com.google.android.material.imageview.ShapeableImageView
      android:layout_width="24dp"
      android:layout_height="24dp"
      android:layout_marginEnd="@dimen/margin_base_plus"
      android:layout_marginTop="@dimen/margin_half_plus"
      app:srcCompat="@drawable/ic_avoid_paved_disabled"
      app:tint="?iconTint" />
    <com.google.android.material.textview.MaterialTextView
      android:text="@string/avoid_paved"
      android:textAppearance="?android:attr/textAppearanceMedium"
      android:layout_width="0dp"
      android:layout_weight="1"
      android:layout_height="wrap_content"
      android:layout_gravity="center_vertical"
      android:textColor="?android:attr/textColorPrimary"/>
    <com.google.android.material.materialswitch.MaterialSwitch
      android:id="@+id/avoid_paved_roads_bicycle_btn"
      android:layout_width="wrap_content"
      android:layout_height="match_parent"
      android:padding="@dimen/margin_half_double_plus"/>
  </LinearLayout>
  <LinearLayout
    android:orientation="horizontal"
    android:minHeight="@dimen/height_block_base"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingEnd="@dimen/margin_half"
    android:paddingStart="@dimen/margin_base">
    <com.google.android.material.imageview.ShapeableImageView
      android:layout_width="24dp"
      android:layout_height="24dp"
      android:layout_marginEnd="@dimen/margin_base_plus"
      android:layout_marginTop="@dimen/margin_half_plus"
      app:srcCompat="@drawable/ic_avoid_steps_disabled"
      app:tint="?iconTint" />
    <com.google.android.material.textview.MaterialTextView
      android:text="@string/avoid_steps"
      android:textAppearance="?android:attr/textAppearanceMedium"
      android:layout_width="0dp"
      android:layout_weight="1"
      android:layout_gravity="center_vertical"
      android:layout_height="wrap_content"
      android:textColor="?android:attr/textColorPrimary"/>
    <com.google.android.material.materialswitch.MaterialSwitch
      android:id="@+id/avoid_steps_bicycle_btn"
      android:layout_width="wrap_content"
      android:padding="@dimen/margin_half_double_plus"
      android:layout_height="match_parent"/>
  </LinearLayout>
</LinearLayout>
</androidx.core.widget.NestedScrollView>