<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/altitude_chart_panel"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_weight="1"
    android:layout_marginBottom="@dimen/margin_half"
    android:layout_marginTop="@dimen/margin_half"
    android:paddingStart="@dimen/altitude_chart_container_padding_left"
    android:paddingEnd="@dimen/altitude_chart_container_padding_left"
    android:orientation="vertical"
    tools:showIn="@layout/fragment_routing">

    <LinearLayout
      android:id="@+id/time_elevation_line"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="horizontal"
      android:layout_marginTop="@dimen/margin_half"
      android:layout_marginBottom="@dimen/margin_half">
        <com.google.android.material.textview.MaterialTextView
          android:id="@+id/time"
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:layout_weight="1"
          android:maxLines="2"
          android:ellipsize="end"
          tools:text="5 h 55 min • 1555km"
          tools:visibility="visible" />

        <com.google.android.material.textview.MaterialTextView
          android:id="@+id/altitude_difference"
          android:layout_width="wrap_content"
          android:layout_height="@dimen/altitude_chart_time_distance_height"
          android:textAppearance="@style/MwmTextAppearance.Body3"
          android:fontFamily="@string/robotoMedium"
          android:textColor="?colorSecondary"
          android:layout_gravity="end"
          android:gravity="center"
          android:visibility="gone"
          tools:text="↗ 43 m ↘ 88 m"
          tools:visibility="visible" />
    </LinearLayout>

    <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="horizontal"
      android:gravity="center_vertical" >

        <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:orientation="vertical"
          android:layout_weight="1">
            <com.google.android.material.imageview.ShapeableImageView
              android:id="@+id/altitude_chart"
              android:layout_height="wrap_content"
              android:layout_width="match_parent" />
            <com.google.android.material.textview.MaterialTextView
              android:id="@+id/time_vehicle"
              android:layout_height="wrap_content"
              android:layout_width="match_parent"
              android:maxLines="2"
              android:ellipsize="end"
              tools:text="5 h 55 min • 1555km"
              tools:visibility="visible" />
        </LinearLayout>

        <com.google.android.material.button.MaterialButton
          android:id="@+id/start"
          style="@style/MwmWidget.M3.Button.Primary"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_weight="0"
          android:layout_marginStart="@dimen/margin_half"
          android:minWidth="@dimen/start_button_width"
          android:text="@string/p2p_start"
          tools:showIn="@layout/menu_route_plan_line"
          android:layout_gravity="center_vertical" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical" >
        <com.google.android.material.button.MaterialButton
          android:layout_weight="1"
          android:id="@+id/btn__manage_route"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          style="@style/Widget.Material3.Button.TextButton"
          android:text="@string/planning_route_manage_route"
          android:textColor="?android:textColorPrimary"
          android:textAlignment="viewStart"
          android:textAppearance="@style/MwmTextAppearance.Body1"
          app:icon="@drawable/ic_manage_route"
          app:iconTint="?android:textColorPrimary"
          app:iconPadding="@dimen/margin_quarter_plus"/>

        <com.google.android.material.button.MaterialButton
          android:layout_weight="0"
          android:id="@+id/btn__save"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          style="@style/Widget.Material3.Button.TextButton"
          android:layout_marginStart="@dimen/margin_base"
          android:minHeight="@dimen/primary_button_min_height"
          android:text="@string/save"
          android:textColor="?android:textColorPrimary"
          android:textAppearance="@style/MwmTextAppearance.Body1"/>
    </LinearLayout>

</LinearLayout>
